--- a/MvcPaging.Demo/Views/Paging/Index.cshtml
+++ b/MvcPaging.Demo/Views/Paging/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using MvcPaging.Demo.Models
 @model IPagedString
 @{
-    ViewBag.Title = "Browse all products";
+    ViewBag.Title = "Text content";
 }
 <h2>@ViewBag.Title</h2>
 @*<table class="grid">
