--- a/MvcPaging.Demo/Views/Home/About.cshtml
+++ b/MvcPaging.Demo/Views/Home/About.cshtml
@@ -3,5 +3,5 @@
 }
 <h2>@ViewBag.Title</h2>
 <p>
-    Visit the project page at <a href="https://github.com/martijnboland/mvcpaging">https://github.com/martijnboland/mvcpaging</a>.
+ Кальманович Дмитрий
 </p>
